overflow issue

--- a/assets/less/style.less
+++ b/assets/less/style.less
@@ -5,13 +5,14 @@
 
 body {
   background-color: #f5f5f5;
-  overflow-x: hidden;
 }
 
 .container {
   width: 96%;
   margin: 0 2%;
   padding: 2em;
+  overflow-x: hidden;
+  position: relative;
 }
 
 .highlight {
